# drinkup-image

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: build-and-publish.yml
src/: main.rs
src/image_processor/: controller.rs  model.rs  service.rs
